--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "./node_modules/.bin/mocha --harmony_destructuring tests",
     "start": "node --harmony_destructuring ./cal.js",
     "cover": "node --harmony_destructuring --harmony_rest_parameters ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha tests",
-    "coveralls": "npm run cover && cat ./coverage/lcov.info"
+    "coveralls": "npm run cover && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
