--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "cal written in node.js",
   "main": "cal.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --harmony_destructuring tests",
+    "test": "./node_modules/.bin/mocha --harmony_destructuring -t 10000 tests",
     "start": "node --harmony_destructuring ./cal.js",
     "cover": "node --harmony_destructuring --harmony_rest_parameters ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha tests",
     "coveralls": "npm run cover && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/AJPcodes/node-cal#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
     "coveralls": "^2.11.6",
     "istanbul": "^0.4.2",
@@ -27,6 +28,7 @@
     "mocha-lcov-reporter": "^1.0.0"
   },
   "dependencies": {
+    "babel-register": "^6.4.3",
     "lodash": "^4.0.1"
   }
 }
