--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "cal written in node.js",
   "main": "cal.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --harmony_destructuring -t 10000 tests",
-    "start": "node --harmony_destructuring ./cal.js",
-    "cover": "node --harmony_destructuring --harmony_rest_parameters ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha tests",
+    "test": "./node_modules/.bin/mocha -t 10000 tests",
+    "cover": "node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/mocha tests",
     "coveralls": "npm run cover && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
